# ftsf

./: LICENSE  README.md  model.py  preprocessing.py  pyproject.toml  scaler.py
.github/workflows/: docs.yml  linting.yml  publish.yml  testing.yml
FTSF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ftsf/: __init__.py  backtest.py  evaluation.py  ftsf.py  ftsf_test.ipynb  model.py  preprocessing.py  scaler.py  utils.py
ftsf/tests/: test_evaluation.py  test_preprocessing.py  test_scaler.py
