[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ftsf"
version = "0.0.2.3"
authors = [{ name="Nikita Safonov", email="sixxio@yandex.ru" }]
description = "Package for financial time series forecasting."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "statsmodels",
  "catboost",
  "xgboost",
  "tensorflow",
]

[project.urls]
"Homepage" = "https://github.com/sixxio/ftsf"
"Documentation" = "https://sixxio.github.io/ftsf/"
"Bug Tracker" = "https://github.com/sixxio/ftsf/issues"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
mypkg = "*.*"
